bug #164
fix for bug #164
Field error validation changes field text to white on white (text looks
invisible) #164

--- a/crisischeckin/crisicheckinweb/Content/Forms.css
+++ b/crisischeckin/crisicheckinweb/Content/Forms.css
@@ -15,7 +15,6 @@
 
 .input-validation-error {
     border-color: #C33A3A !important;
-	color: white !important;
 }
 
 .feedbackHelper {
